# robogames_pi

./: .gitmodules  README.md  TODO ROBOGAMES.txt  slamtoolbox.sh  tmp.txt
arduino_code/: Communication.cpp  Communication.h  MotorController.cpp  MotorController.h  MyRobotProject.ino  Sensors.cpp  Sensors.h  ServoController.cpp  ServoController.h  gps_imu.ino  test_controller.ino  test_hardware_interf.ino  test_servo_only.ino  try_robogames_motors.ino
car_robot_ws/: README.txt  chatgpt_this.txt  code.txt  connect.txt  export_yolov8.py  first_build.sh  launchit.sh  robot_control_teleop.sh  rtabmap_launch_script.sh  run_yolo.sh  rviz2.sh  source.sh  system_recovery.sh
car_robot_ws/install/: local_setup.sh  setup.sh
car_robot_ws/log/: latest_build
car_robot_ws/src/: color_recognition.cpp
car_robot_ws/src/articubot/: CMakeLists.txt
car_robot_ws/src/articubot/config/: my_controllers.yaml
car_robot_ws/src/articubot/src/: joy_serial.cpp  joy_serial.py
car_robot_ws/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
car_robot_ws/src/log/: latest_build
car_robot_ws/src/mini_car_bot/: CMakeLists.txt
car_robot_ws/src/opencv_tools/: setup.py
car_robot_ws/src/src/: depth_to_laserscan.cpp
car_robot_ws/src/yolobot_recognition/: CMakeLists.txt
car_robot_ws/src/yolov8_msgs/: CMakeLists.txt
color.v1i.yolov5pytorch/: README.dataset.txt  README.roboflow.txt  data.yaml
color.v1i.yolov5pytorch/train/: labels.cache
color.v1i.yolov5pytorch/train/labels/: 11_cyan-c2bc559bc3_png.rf.8d6e2b23eb52979dc6f2e23529135c58.txt  18067358292_ef8ef779e9_b_jpg.rf.bde8f04c3720cf87a095fb726cd2f20c.txt  1f7e1_3d_png.rf.f2ec25c6a59160bf7817f520e3b46a9d.txt  31Fn9yQd8qL-_AC_UL210_SR210-210__jpg.rf.5a71473a1aae70c0a6c583879226c3cc.txt  (+261 more)
color.v1i.yolov5pytorch/valid/: labels.cache
install/: local_setup.sh  setup.sh
log/: latest_build
runs/detect/train/: args.yaml
yolobot/install/: local_setup.sh  setup.ps1  setup.sh
yolobot/log/: latest_build
(+444 files in other folders)
